3581.	[bug]		Changed the tcp-listen-queue default to 10. [RT #33029]

3580.	[bug]		Addressed a possible race in acache.c [RT #33602]

3579.	[maint]		Updates to PKCS#11 openssl patches, supporting
			versions 0.9.8y, 1.0.0k, 1.0.1e [RT #33463]

3578.	[bug]		'rndc -c file' now fails if 'file' does not exist.
			[RT #33571]

3577.	[bug]		Handle zero TTL values better. [RT #33411]

3576.	[bug]		Address a shutdown race when validating. [RT #33573]

3574.	[doc]		The 'hostname' keyword was missing from server-id
			description in the named.conf man page. [RT #33476]

3573.	[bug]		"rndc addzone" and "rndc delzone" incorrectly handled
			zone names containing punctuation marks and other
			nonstandard characters. [RT #33419]

3571.	[bug]		Address race condition in dns_client_startresolve().
			[RT #33234]

3566.	[func]		Log when forwarding updates to master. [RT #33240]

	--- 9.9.3 released ---

3568.	[cleanup]	Add a product description line to the version file,
			to be reported by named -v/-V. [RT #33366]

3567.	[bug]		Silence clang static analyzer warnings. [RT #33365]

3563.	[contrib]	zone2sqlite failed with some table names. [RT #33375]

3561.	[bug]		dig: issue a warning if an EDNS query returns FORMERR
			or NOTIMP.  Adjust usage message. [RT #33363]

	--- 9.9.3rc2 released ---

3560.	[bug]		isc-config.sh did not honor includedir and libdir
			when set via configure. [RT #33345]

3559.	[func]		Check that both forms of Sender Policy Framework
			records exist or do not exist. [RT #33355]

3558.	[bug]		IXFR of a DLZ stored zone was broken. [RT #33331]

3557.	[bug]		Reloading redirect zones was broken. [RT #33292]

3556.	[maint]		Added AAAA for D.ROOT-SERVERS.NET.

3555.	[bug]		Address theoretical race conditions in acache.c
			(change #3553 was incomplete). [RT #33252]

3553.	[bug]		Address suspected double free in acache. [RT #33252]

3552.	[bug]		Wrong getopt option string for 'nsupdate -r'.
			[RT #33280]

3549.	[doc]		Documentation for "request-nsid" was missing.