@@ -1,0 +1,14 @@
+acl "transferees" {};
+masters "stealthMasters" {127.0.0.1;};
+masters "publicSlaves" {127.0.0.1;};
+zone "example.net" {
+        type slave;
+        key-directory "/var/lib/bind/example.net";
+        auto-dnssec maintain;
+        inline-signing yes;
+        masters { stealthMasters; };
+        notify explicit;
+        also-notify { publicSlaves; };
+        allow-transfer { localhost; transferees; };
+};
+
